--- a/app/style/theme.style.scss
+++ b/app/style/theme.style.scss
@@ -4,11 +4,11 @@
     --primary-color-light: #2589e6;
     --color-light: #161616;
     --background-light: #fff;
-  
+
     // Dark Theme Colors
     --primary-color-dark: #ff6b6b;
     --color-dark: #fff;
-    --background-dark: #161616;
+    --background-dark: #1f1c30;
   }
   
   [data-theme='light'] {
