--- a/app/components/header/user/userMenu.module.scss
+++ b/app/components/header/user/userMenu.module.scss
@@ -1,10 +1,31 @@
-.nav {
-    font-size: 2rem;
+@use '../../../style/mixins.style.scss' as *;
+
+.container {
+  position: relative;
+}
+
+.profile__btn {
+  @include flexBox(row, center, center);
 }
 
 .avatar {
-    width: 4rem;
-    height: 4rem;
-    border-radius: 50%;
-    margin-right: 1rem;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+
+.arrow {
+  color: var(--color);
+  width: 1.5rem;
+  height: 1.5rem;
+  transition: transform 250ms ease;
+}
+
+.arrow__close {
+  transform: rotate(0deg);
+}
+
+.arrow__open {
+  transform: rotate(180deg);
 }
