Add nav links with map

--- a/app/style/theme.style.scss
+++ b/app/style/theme.style.scss
@@ -14,7 +14,7 @@
     --primary-color-dark: #ff6b6b;
     --color-dark: #fff;
     --background-dark: #1f1c30;
-    --background-dark-secondary: #463d7e;
+    --background-dark-secondary: #4e4975;
   }
   
   [data-theme='light'] {
