Add minimal theme switch

--- a/app/components/header/header.module.scss
+++ b/app/components/header/header.module.scss
@@ -8,3 +8,7 @@
   background-color: var(--background);
   color: var(--color);
 }
+
+.user__wrapper {
+  @include flexBox(row, center, center, 2rem);
+}
