--- a/app/style/theme.style.scss
+++ b/app/style/theme.style.scss
@@ -7,20 +7,20 @@
     --primary-color-light: #2589e6;
     --color-light: #161616;
     --color-light-secondary: #7a7a7a;
-    --background-light: #fff;
-    --background-light-secondary: #f5f5f5;
-    --hover-light: #ebebeb;
-    --separator-light: #e9e9e9;
+    --background-light: #f8f9fa;
+    --background-light-secondary: #f1f3f5;
+    --hover-light: #e9ecef;
+    --separator-light: #dee2e6;
 
 
     // Dark Theme Colors
     --primary-color-dark: #ff6b6b;
     --color-dark: #fff;
     --color-dark-secondary: #999;
-    --background-dark: #1f1c30;
-    --background-dark-secondary: #423e63;
-    --hover-dark: rgb(88, 83, 136);
-    --separator-dark: #353353;
+    --background-dark: #212529;
+    --background-dark-secondary: #343a40;
+    --hover-dark: #495057;
+    --separator-dark: #495057;
   }
   
   [data-theme='light'] {
