--- a/app/components/header/sideBar/menu.module.scss
+++ b/app/components/header/sideBar/menu.module.scss
@@ -2,5 +2,10 @@
 
 .container {
   @include flexBox(row, center, center, 2rem);
+}
+
+.title {
   font-size: 2rem;
+  font-weight: 700;
+  color: var(--primary-color);
 }
