Add content and footer

--- a/app/style/theme.style.scss
+++ b/app/style/theme.style.scss
@@ -4,7 +4,7 @@
     --shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
 
     // Light Theme Colors
-    --primary-color-light: #2589e6;
+    --primary-color-light: #339af0;
     --color-light: #161616;
     --color-light-secondary: #7a7a7a;
     --background-light: #f8f9fa;
@@ -14,7 +14,7 @@
 
 
     // Dark Theme Colors
-    --primary-color-dark: #ff6b6b;
+    --primary-color-dark: #63e6be;
     --color-dark: #fff;
     --color-dark-secondary: #999;
     --background-dark: #212529;
