--- a/app/style/reset.style.scss
+++ b/app/style/reset.style.scss
@@ -16,6 +16,9 @@ html {
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+  display: flex;
+  flex-direction: column;
+  min-height: 100dvh;
 }
 
 img,
