--- a/app/components/header/sideBar/menu.module.scss
+++ b/app/components/header/sideBar/menu.module.scss
@@ -7,5 +7,7 @@
 .title {
   font-size: 2rem;
   font-weight: 700;
+  letter-spacing: 0.3rem;
+  text-transform: uppercase;
   color: var(--primary-color);
 }
